--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     font-family: 'Work Sans', sans-serif;
@@ -7,6 +6,11 @@
 
 @-ms-viewport{
     width: device-width;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 body {
@@ -34,6 +38,11 @@ img.messageIcon {
 	padding-top: 5px;
 	float: right;
 	padding-right: 6px;
+}
+
+img.galleryThumbnail {
+	width: 150px;
+	height: 100px;
 }
 
 .container {
@@ -80,6 +89,70 @@ img.messageIcon {
 	filter: invert(100%);
 }
 
+
+.formButton {
+	height: 23px;
+	margin-top: 15px;
+	border-radius: 14px;
+	color: white;
+}
+
+.uploadContainer {
+	display: flex;
+	justify-content: center;
+	padding-top: 50px;
+}
+
+.uploadForm {
+	width: 50%;
+	text-align: center;
+}
+
+.galleryZoomed {
+	background: rgba(0, 0, 0, 1);
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	padding-top: 100px;
+	padding-left: 5%;
+	padding-right: 5%;	
+
+}
+
+.galleryContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-top: 17px;
+	padding-left: 5%;
+}
+
+.galleryContainer div {
+	width: 150px;
+	height: 100px;
+	background-color: powderblue;
+	margin: 5px;
+}
+
+.zoomedNav {
+	display: flex;
+	justify-content: center;
+}
+
+.zoomedNav img {
+	filter: invert(100%);
+	height: 45px;
+	margin: 100px;
+	box-shadow: 2px 141px 173px;
+}
+
+.xIcon {
+	filter: invert(100%);
+	height: 14px;
+	margin: -6px;
+
+}
+
 @media only screen and (min-width: 1000px) {
 	.col-1 {width: 8.33%;}
 	.col-2 {width: 16.66%;}
@@ -93,9 +166,13 @@ img.messageIcon {
 	.col-10 {width: 83.33%;}
 	.col-11 {width: 91.66%;}
 	.col-12 {width: 100%;}
-    .container {
-    	display: inline;
-    	padding-bottom: 100px;
+    .node {
+    	margin: 0 auto;
     }
+    .galleryContainer {
+    	padding-left: 20%;
+    	padding-right: 20%;
+    	padding-top: 55px;
 
+    }
 }
