--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,11 @@ img.galleryThumbnail {
 	height: 100px;
 }
 
+ul.userPhotoIcon {
+	width: 10%;
+	float: left;
+}
+
 .container {
 	padding-bottom: 100px;
 }
@@ -52,6 +57,8 @@ img.galleryThumbnail {
 .navButton {
 	color: white;
 	height: 46px;
+	width: 100%;
+	position: fixed;
 	padding: 15px;
 	background-color: #E46651;
 }
