--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ a {
 
 body {
 	background-color: #1DA1F2;
+	height: 100%;
 }
 
 button {
@@ -116,7 +117,7 @@ ul.userPhotoIcon {
 
 .galleryZoomed {
 	background: rgba(0, 0, 0, 1);
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	padding-top: 100px;
@@ -129,7 +130,7 @@ ul.userPhotoIcon {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	padding-top: 17px;
+	padding-top: 87px;
 	padding-left: 5%;
 }
 
@@ -142,6 +143,7 @@ ul.userPhotoIcon {
 
 .galleryContainer img {
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 }
 
