--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ ul.userPhotoIcon {
   margin-top: 10px;
   height: 150px;
   width: 95%;
-  background-color: white;
+  background-color: #F5F8F2;
 }
 
 .announcementHeader {
@@ -70,9 +70,9 @@ ul.userPhotoIcon {
 }
 
 .announcementFooter {
-  margin-top: 5px;
+  margin-top: 16px;
   height: 45px;
-  background-color: #323333;
+  background-color: #1DA1F2;
 }
 
 .announcementInputBox {
@@ -86,7 +86,8 @@ ul.userPhotoIcon {
   height: 65px;
   outline: none;
   width: 100%;
-  border: 1px solid white;
+  background-color: #F5F8F2;
+  border: 1px solid #F5F8F2;
 }
 
 .announcementPost {
@@ -143,7 +144,7 @@ ul.userPhotoIcon {
 .photoFooter {
 	height: 50px;
 	padding: 3px;
-	background-color: #323333;
+	background-color: #F5F8F2;
 }
 
 .uploadParent {
@@ -233,7 +234,7 @@ img.imageDropPreview {
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	padding-top: 1px;
+	padding-top: 25px;
 	padding-left: 5%;
 	padding-right: 5%;
 
@@ -243,15 +244,15 @@ img.imageDropPreview {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	padding-top: 87px;
-	padding-left: 5%;
+	padding-top: 105px;
 }
 
 .galleryContainer div {
-	width: 150px;
-	height: 100px;
-	background-color: powderblue;
-	margin: 5px;
+	width: 200px;
+	height: 150px;
+	background-color: #F5F8F2;
+	margin: 2px;
+  padding: 16px;
 }
 
 .galleryContainer img {
@@ -307,12 +308,16 @@ img.imageDropPreview {
 
     .announcementContainer {
       width: 50%;
-      margin-right: 10%;
+      margin-right: 12%;
     }
 
     .dropZoneBox {
       height: 200px;
       width: 100%;
+    }
+
+    .galleryContainer div {
+    	margin: 10px;
     }
 
     .galleryContainer {
@@ -342,5 +347,7 @@ img.imageDropPreview {
     .zoomedPhotoContainer {
       width: 40%;
     }
+
+
 
 }
