changingDB structure created bugs in both gallery and home page. cleaning up bugs. One left for zoomed gallery component

--- a/src/index.css
+++ b/src/index.css
@@ -56,11 +56,16 @@ img.familyPhoto {
 	width: 100%;
 }
 
-img.messageIcon {
-	height: 41px;
+i.messageIcon {
+  font-size: 30px;
+  color: white;
 	padding-top: 5px;
 	float: right;
 	padding-right: 6px;
+}
+
+i.messageIcon:hover {
+  color: #EE930E;
 }
 
 img.galleryThumbnail {
@@ -70,6 +75,11 @@ img.galleryThumbnail {
 
 ul.userPhotoIcon {
 	display: none;
+}
+
+.announcementBlueLine {
+  height: 4px;
+  background-color: #1DA1F2;
 }
 
 .announcementTextNode {
@@ -89,7 +99,7 @@ ul.userPhotoIcon {
 .announcementParent {
   display: flex;
   justify-content: center;
-  padding-top: 30px;
+  padding-top: 60px;
 }
 
 .announcementContainer {
@@ -100,14 +110,14 @@ ul.userPhotoIcon {
 }
 
 .announcementHeader {
-  height: 40px;
+  height: 25px;
   background-color: #1DA1F2;
 }
 
 .announcementFooter {
   margin-top: 16px;
   height: 45px;
-  background-color: #1DA1F2;
+  background-color: #323333;
 }
 
 .announcementInputBox {
@@ -126,7 +136,7 @@ ul.userPhotoIcon {
 }
 
 .announcementPost {
-  padding-top: 17px;
+  padding-top: 11px;
   padding-right: 16px;
   float: right;
   color: white;
@@ -320,10 +330,13 @@ img.imageDropPreview {
  }
 
 .xIcon {
-	filter: invert(100%);
-	height: 14px;
-	margin: -6px;
+  color: white;
+	font-size: 21px;
+	margin-left: -16px;
+}
 
+.xIcon:hover {
+  color: #EE930E;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -388,5 +401,5 @@ img.imageDropPreview {
     .zoomedPhotoContainer {
       width: 40%;
     }
-  
+
 }
