--- a/src/index.css
+++ b/src/index.css
@@ -403,6 +403,10 @@ img.imageDropPreview {
       margin-right: 11%;
     }
 
+    .commentContainer {
+      width: 40%;
+    }
+
     .dropZoneBox {
       height: 200px;
       width: 100%;
