date separator completed with basic styling

--- a/src/index.css
+++ b/src/index.css
@@ -369,7 +369,7 @@ img.imageDropPreview {
 	padding-top: 80px;
 }
 
-.gallerySeperator {
+.gallerySeparator {
   width: 100%;
   height: 2px;
   border: 1px solid;
