--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,14 @@ i {
   cursor: pointer;
 }
 
+hr {
+  background: white;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  height: 2px;
+  border: white;
+}
+
 a:hover, a:focus {
   color: #EE930E;
 }
@@ -288,9 +296,6 @@ input.commentBox {
 	margin: -6px;
 }
 
-.uploadButton:hover {
-  filter: brightness(100%);}
-
 .fileUpload {
   display: flex;
   justify-content: center;
@@ -349,6 +354,14 @@ img.imageDropPreview {
 	text-align: center;
 }
 
+img.memberIconClickable {
+  border: 2px solid white;
+}
+
+img.memberIconClickable:hover {
+  border: 2px solid #EE930E;;
+}
+
 .galleryZoomed {
   display: flex;
   flex-direction: column;
@@ -372,8 +385,14 @@ img.imageDropPreview {
 .gallerySeparator {
   width: 100%;
   height: 2px;
-  border: 1px solid;
-  padding: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 47px;
+}
+
+.gallerySeparator p {
+  color: white;
+  font-size: 20px;
 }
 
 .galleryThumbnail {
@@ -381,6 +400,10 @@ img.imageDropPreview {
 	height: 103px;
 	background-color: #F5F8F2;
 	margin: 2px;
+}
+
+.galleryThumbnail:hover {
+  box-shadow: 7px 10px 0px #323333;
 }
 
 .galleryContainer img {
@@ -459,7 +482,7 @@ img.imageDropPreview {
     .galleryContainer {
     	padding-left: 20%;
     	padding-right: 20%;
-    	padding-top: 55px;
+    	padding-top: 82px;
     }
 
 		ul.userPhotoIcon {
@@ -476,6 +499,7 @@ img.imageDropPreview {
 
 		ul.userPhotoIcon img {
 			padding: 1px;
+      margin: 3px;
 		}
 
     .flexZoomedContainer {
