--- a/src/index.css
+++ b/src/index.css
@@ -52,9 +52,9 @@ button {
 }
 
 
-img.userIcon {
-	height: 41px;
-	border-radius: 50%;
+img.userIcon{
+	height: 46px;
+	/*border-radius: 50%;*/
 	padding: 5px;
 	display: inline;
 	float: left;
@@ -64,6 +64,28 @@ img.familyPhoto {
   margin-top: 5px;
 	width: 100%;
 }
+/*option1 float right, option2 indent*/
+img.userIcon.commentLeft {
+  display: inline;
+  height: 46px;
+  padding: 5px;
+  float: right;
+  /*padding-left: 20px;*/
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.replyCommentTextContainer {
+  display: inline-block;
+  width: 85%;
+  margin-left: 68px;
+  height: 41px;
+  padding-top: 2px;
+  padding-left: 10px;
+  background-color: lightgrey;
+ }
 
 i.messageIcon {
   font-size: 30px;
@@ -108,6 +130,9 @@ ul.userPhotoIcon {
 
 input.announcementInput {
   font-size: 25px;
+  word-wrap: break-word;
+  word-break: break-all;
+  height: auto;
 }
 
 .announcementBlueLine {
