--- a/src/index.css
+++ b/src/index.css
@@ -500,6 +500,7 @@ img.memberIconClickable:hover {
 .commentTextContainer {
   display: inline-block;
   width: 100%;
+  z-index: 3;
 }
 
 .commentText {
@@ -516,10 +517,20 @@ img.memberIconClickable:hover {
   width: 100%;
   height: 300px;
   opacity: 0;
-
-
 }
 
+.deleteAnnouncement {
+  float: right;
+  padding: 7px;
+}
+
+.deleteComment {
+  font-size: 20px;
+  padding: 9px;
+  /*opacity: 0;*/
+  float: right;
+  z-index: 8;
+}
 
 @media only screen and (min-width: 1000px) {
 	.col-1 {width: 8.33%;}
