--- a/src/index.css
+++ b/src/index.css
@@ -435,18 +435,30 @@ img.memberIconClickable:hover {
 
 .zoomedNav {
 	text-align: center;
+  position: absolute;
+  z-index: 100;
+  padding-top: 220px;
+  width: 48%;
+}
+
+.zoomedPhotoContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.arrowLeft {
+  float: left;
+}
+
+.arrowRight {
+  float: right;
 }
 
 .zoomedPhoto {
   width: 100%;
   max-height: 90%;
-}
-
-.zoomedNav img {
-	filter: invert(100%);
-	height: 45px;
-	margin: 100px;
-	box-shadow: 2px 141px 173px;
+  padding-top: 54px;
+  position: relative;
 }
 
 .white {
@@ -463,34 +475,6 @@ img.memberIconClickable:hover {
 .xIcon:hover {
   color: #EE930E;
 }
-
-/*.replyCommentTextContainer {
-  display: inline-block;
-  width: 87%;
-  height: 41px;
-  padding-top: 2px;
-  padding-left: 10px;
-  background-color: lightgrey;
- }
-
- .commentTextContainer {
-   display: inline-block;
-   width: 87%;
-   height: 41px;
-   padding-top: 2px;
-   padding-left: 10px;
-
- }
-
-.commentContainer {
-  width: 90%;
-  background-color: #f5f8f2;
-}
-
-.replyContainer {
-  display: flex;
-  flex-direction: row-reverse;
-}*/
 
 .commentContainer {
   width: 90%;
