x arrows positioned properly.  cursor and hover  styles added.

--- a/src/index.css
+++ b/src/index.css
@@ -320,7 +320,13 @@ input.commentBox {
   display: flex;
   justify-content: center;
   padding-top: 10%;
+}
 
+.xIconUpload {
+  color:white;
+  font-size: 21px;
+  margin-left: -16px;
+  padding-top: 82px;
 }
 
 input.imageDescription {
@@ -329,12 +335,18 @@ input.imageDescription {
   margin: 10px;
   margin-bottom: 42px;
   text-align: center;
+  font-size: 16px;
 }
+
 
 .imgDropText {
   text-align: center;
   padding: 31px;
   color: #323333;
+  cursor: pointer;
+}
+.imgDropText:hover {
+  color: #EE930E;
 }
 
 p.dropZoneText {
@@ -342,6 +354,7 @@ p.dropZoneText {
   padding: 10px;
   margin: 10px;
   display: inline;
+  cursor: pointer;
 }
 
 img.imageDropPreview {
@@ -356,6 +369,7 @@ img.imageDropPreview {
   justify-content: center;
   padding-top: 77px;
 }
+
 
 .uploadParent {
 	display: flex;
@@ -469,6 +483,11 @@ img.memberIconClickable:hover {
   color: white;
 	font-size: 21px;
 	margin-left: -16px;
+  padding-top: 35px;
+}
+
+.noMargin {
+  margin: 0;
 }
 
 .xIcon:hover {
